fixed spacings

--- a/style/main.scss
+++ b/style/main.scss
@@ -15,12 +15,17 @@ body {
   height: 90vh;
   width: 100vw;
   .title {
-    height: 20vh;
+    height: 33.333vh;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
   }
   #unities {
     display: flex;
-    height: 30vh;
-    gap: 20px;
+    height: 33.333vh;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
     @media (max-width: 992px) {
       flex-direction: column;
       #fahrenheitInput::-webkit-input-placeholder,
@@ -35,6 +40,10 @@ body {
     }
   }
   .unity {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     p {
       font-weight: map-get($font-weight, semibold);
     }
@@ -54,28 +63,31 @@ body {
     justify-content: center;
     align-items: center;
     width: 100vw;
-    #btn {
-      padding: 15px 40px;
-      border: none;
-      border-radius: 30px;
-      background-color: $color-primary;
-      color: $color-button;
-      font-size: 16px;
-      font-weight: map-get($font-weight, semibold);
-      letter-spacing: 1px;
-      &:hover {
-        background-color: $bg-hover;
+    height: 33.333vh;
+    .button {
+      height: 15.333vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      #btn {
+        padding: 15px 40px;
+        border: none;
+        border-radius: 30px;
+        background-color: $color-primary;
+        color: $color-button;
+        font-size: 16px;
+        font-weight: map-get($font-weight, semibold);
+        letter-spacing: 1px;
+        &:hover {
+          background-color: $bg-hover;
+        }
       }
     }
     .messages {
-      height: 20vh;
+      height: 18vh;
       #errorMsg {
         color: $color-error;
         font-weight: map-get($font-weight, bold);
-      }
-      #convertionToCelsius,
-      #convertionToFahrenheit,
-      #errorMsg {
       }
     }
   }
